--- a/app/src/main/res/layout/fragment_zhihu.xml
+++ b/app/src/main/res/layout/fragment_zhihu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.v7.widget.Toolbar
@@ -14,4 +15,22 @@
             android:text="知乎日报"
             android:textColor="@color/white"/>
     </android.support.v7.widget.Toolbar>
+    <com.astuetz.PagerSlidingTabStrip
+        android:id="@+id/pst_tab"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/white"
+        android:textSize="@dimen/tv_size_small"
+        app:pstsDividerColor="@color/transparent"
+        app:pstsIndicatorColor="@color/colorPrimary"
+        app:pstsIndicatorHeight="2dp"
+        app:pstsUnderlineColor="@color/gray_line_color"
+        app:pstsShouldExpand="true"
+        app:pstsTabPaddingLeftRight="16dp"
+        app:pstsUnderlineHeight="0.5dp"
+        />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
