--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -14,4 +14,8 @@
         <attr name="msv_animateViewChanges" format="boolean" />
     </declare-styleable>
 
+    <declare-styleable name="CustomScaleImageView">
+        <attr name="widthScale" format="integer" />
+        <attr name="heightScale" format="integer" />
+    </declare-styleable>
 </resources>
