--- a/app/src/main/res/layout/fragment_wechat.xml
+++ b/app/src/main/res/layout/fragment_wechat.xml
@@ -34,7 +34,7 @@
             app:msv_errorView="@layout/error_view"
             app:msv_loadingView="@layout/loading_view"
             app:msv_viewState="loading">
-            <com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView
+            <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_wechat"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
